FIX: Dropdown movement. ADD: Gaps between bid items.

--- a/Algoverse-app/src/app/trade-detail/trade-detail.component.scss
+++ b/Algoverse-app/src/app/trade-detail/trade-detail.component.scss
@@ -271,6 +271,8 @@ input[type=date] {
   }
 }
 .bid{
+  gap: 24px;
+
   &:hover {
     cursor: pointer;
   }
